--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,12 +2,13 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">E-Commerce</a>
+      <!--<a class="navbar-brand" href="#">E-Commerce</a>-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!--
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <div>
             <li (click)="navToLoginPage()" type="button" class="nav-item">
@@ -15,29 +16,30 @@
             </li>
           </div>
         </ul>
+        -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <div>
             <li (click)="navToUserPage()" type="button" class="nav-item">
-              <a class="nav-link active" aria-current="page">User</a>
+              <a class="nav-link active" aria-current="page">Nutzer</a>
             </li>
           </div>
         </ul>
-
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <div>
             <li (click)="navToEmployeePage()" type="button" class="nav-item">
-              <a class="nav-link active" aria-current="page">Employee</a>
+              <a class="nav-link active" aria-current="page">Mitarbeiter</a>
             </li>
           </div>
         </ul>
-
+        <!--
         <div style="text-align: right;">
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
+        -->
       </div>
     </div>
   </nav>
