--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -15,3 +15,13 @@
     width: 250px;
     margin: 5px;
 }
+
+.regLink {
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.regLink:hover {
+    color: purple;
+}
