--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <div>
             <li (click)="navToLoginPage()" type="button" class="nav-item">
-              <a class="nav-link active" aria-current="page">Login</a>
+              <a class="nav-link active" aria-current="page">Registrierung</a>
             </li>
           </div>
         </ul>
