Fertig fuer Build

--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -17,7 +17,7 @@
     <main role="main" class="container">
         <div class="jumbotron text-center">
             <h1>e-Commerce: Service-Mitarbeiter</h1>
-            <p class="lead text-info">Easy Transfer!</p>
+            <p class="lead text-info">Konten verwalten</p>
         </div>
     </main>
 
