--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -33,7 +33,7 @@
     <div class="userInput">
         <div>
             <div>
-                <h2>Hallo {{currentUser.firstName}}, {{currentUser.lastName}}!</h2>
+                <h2>Hallo {{currentUser.firstName}} {{currentUser.lastName}}!</h2>
                 <br>
                 <br>
             </div>
