--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -103,7 +103,7 @@
                                     <th scope="col">
                                         <button *ngIf="!deposit?.authorized"
                                             (click)="authorizePayment(usersSort.id, deposit)" type="button"
-                                            class="btn btn-primary">authorisieren</button>
+                                            class="btn btn-primary">autorisieren</button>
                                     </th>
                                 </tr>
                             </ng-container>
@@ -147,7 +147,7 @@
                                         <th scope="col">
                                             <button *ngIf="!deposit?.authorized"
                                                 (click)="authorizePayment(usersSort.id, deposit)" type="button"
-                                                class="btn btn-primary">authorisieren</button>
+                                                class="btn btn-primary">autorisieren</button>
                                         </th>
                                     </tr>
                                 </ng-container>
@@ -193,7 +193,7 @@
                                             <div>
                                                 <button *ngIf="!deposit?.authorized"
                                                     (click)="authorizePayment(usersSort.id, deposit)" type="button"
-                                                    class="btn btn-primary">authorisieren</button>
+                                                    class="btn btn-primary">autorisieren</button>
                                             </div>
                                         </th>
                                     </tr>
@@ -242,7 +242,7 @@
                                             <th scope="col">
                                                 <button *ngIf="!deposit?.authorized"
                                                     (click)="authorizePayment(usersSort.id, deposit)" type="button"
-                                                    class="btn btn-primary">authorisieren</button>
+                                                    class="btn btn-primary">autorisieren</button>
                                             </th>
                                         </tr>
                                     </ng-container>
