--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,7 +37,7 @@
     <main role="main" class="container">
         <div class="jumbotron text-center">
             <h1>e-Commerce: Login</h1>
-            <p class="lead text-info">Easy Transfer!</p>
+            <p class="lead text-info">Login und Registrierung</p>
         </div>
         <br>
         <br>
