--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -26,7 +26,7 @@
     <main role="main" class="container">
         <div class="jumbotron text-center">
             <h1>e-Commerce: Benutzer</h1>
-            <p class="lead text-info">Transfer</p>
+            <p class="lead text-info">Kontoaktionen</p>
         </div>
     </main>
 
